--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,4 +81,11 @@
         android:layout_marginBottom="16dp"
         android:text="@string/dial_number" />
 
+    <Button
+        android:id="@+id/btn_google_pixel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Google Pixel" />
+
 </LinearLayout>
